--- a/style2.css
+++ b/style2.css
@@ -1082,6 +1082,12 @@ padding: 2px; */
     opacity: 0;
     width: 200px;
   }
+  .grid-container {
+    display: none;
+  }
+  .bell {
+    display: none;
+  }
 }
 
 @media (max-width: 400px) {
